--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Core/vendor/GLFW"]
 	path = Core/vendor/GLFW
-	url = https://github.com/TheCherno/glfw.git
+	url = https://github.com/rifkikesepara/glfw.git
 [submodule "Core/vendor/imgui"]
 	path = Core/vendor/imgui
 	url = https://github.com/rifkikesepara/imgui.git
