Scene Serializer, UIElements
-Scene Serializer has been implemented now we can read scenes thorugh yaml files
-UIElements can be rendered without depending the resoluation
-Some files have been cleared
-Window Title update function has been implemented

--- a/ProjectInvasion/ProjectInvasion.vcxproj
+++ b/ProjectInvasion/ProjectInvasion.vcxproj
@@ -131,11 +131,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\SceneInit.h" />
     <ClInclude Include="src\AcitveScene.h" />
     <ClInclude Include="src\DebugLayer.h" />
     <ClInclude Include="src\GameLayer.h" />
-    <ClInclude Include="src\PickerLayer.h" />
-    <ClInclude Include="src\ShadowTestLayer.h" />
     <ClInclude Include="src\TestLayer.h" />
   </ItemGroup>
   <ItemGroup>
