--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -1,16 +1,21 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=32,177
 Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=38,18
+Pos=14,12
 Size=286,293
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=452,15
+Pos=385,14
 Size=550,685
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
 [Docking][Data]
