Component Events, gitignore Updates
-Component events has been tried to exposed as a different class template instead of template functions (might be improved later)
-gitignore has been updated to ignore visual studio prject files

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,8 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+*.vcxproj
+*.vcxproj.filters
 
 # Chutzpah Test files
 _Chutzpah*
@@ -399,3 +401,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+#Build Files
+Makefile
